--- a/.travis.yml
+++ b/.travis.yml
@@ -17,6 +17,14 @@ after_success:
   - docker build -t abubaker/multi-nginx ./nginx
   - docker build -t abubaker/multi-server ./server
   - docker build -t abubaker/multi-worker ./worker
+  #login to docker CLI
+  - echo "$DOCKER_PASSWORD" | docker login -u "$DOCKER_ID" --password-stdin
+
+  #Take those images and push them to docker hub
+  - docker push abubaker/multi-client
+  - docker push abubaker/multi-nginx
+  - docker push abubaker/multi-server
+  - docker push abubaker/multi-worker
 # deploy:
 #   provider: elasticbeanstalk
 #   region: 'us-east-1'
